--- a/index.css
+++ b/index.css
@@ -4,7 +4,8 @@ h1 {
     text-align: center;
 }
 h2 {
-    background-color: rgb(196, 89, 89);
+    background-color: rgb(36, 106, 235);
+    color: rgb(226, 223, 216);
     text-align: center;
 }
 h3 {
@@ -18,5 +19,10 @@ h3 {
     margin-top: 5vh;
 }
 .it {
-    background: linear-gradient(rgb(250, 214, 115),rgb(182, 129, 50)) ;
+    background: linear-gradient(to right, rgb(250, 214, 115),rgb(182, 129, 50)) ;
+}
+.img-fluid{
+    border: 3px solid rgb(233, 229, 236);
+    border-radius: 10%;
+    opacity: 0.9;
 }
